Bug Fix: About Me content was not centered in Firefox

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -103,10 +103,10 @@ a:link {
   padding-left: 1%;
   padding-right: 1%;
   text-align: left;
-  min-width: none;
+  width: 90%;
   max-width: 620px;
-  margin-left: 5%;
-  margin-right: 5%;
+  margin-left: auto;
+  margin-right: auto;
   margin-bottom: 1%;
 }
 
